# linalg

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: linear_system.cpp  matmul.cpp  solve_linear_system.cpp
experiments/: blas_comparison.cpp  hilbert_qr.cpp  matmul.cpp  pivoting_vs_no_pivoting.cpp
include/: linalg_error.hpp  lu.hpp  matrix.hpp  norms.hpp  qr.hpp  qr_iteration.hpp  triangular_solve.hpp  vector.hpp
src/: cholesky.cpp  expm.cpp  iterative.cpp  linalgebra.cpp  linalgebra_error.cpp  lu.cpp  matrix.cpp  norms.cpp  precond.cpp  qr.cpp  qr_iteration.cpp  svd.cpp  sym_eigen.cpp  triangular_solve.cpp  vector.cpp
tests/: test_cholesky.cpp  test_expm.cpp  test_iterative.cpp  test_lu.cpp  test_matrix.cpp  test_precond.cpp  test_qr.cpp  test_qr_iteration.cpp  test_svd.cpp  test_sym_eigen.cpp  test_triangular_solve.cpp  test_vector.cpp
